Reverts edits and fixes missing overflow only 🙄
SRFCMS-6745

--- a/source/_patterns/10-components/article-teaser/article-teaser.scss
+++ b/source/_patterns/10-components/article-teaser/article-teaser.scss
@@ -34,12 +34,8 @@
 }
 
 .article-teaser__wrapper {
-  display: block;
+  display: inline-block;
   margin: 16px;
-  
-  @include tablet-up {
-    overflow: hidden;
-  }
 }
 
 .article-teaser__image {
@@ -58,6 +54,7 @@
 
 .article-teaser__content {
   margin-left: 92px;
+  overflow: hidden;
 
   @include tablet-up {
     margin-left: 158px;
